# dabo

./: .gitignore  ANNOUNCE  AUTHORS  COPYING  ChangeLog  INSTALL  INSTALL.md  LICENSE.TXT  MANIFEST.in  README  README.md  RELEASENOTES.md  TODO  __init__.py  __version__.py  app.py  dApp.py  dBug.py  dColors.py  dConstants.py  dError.py  dEvents.py  dException.py  dLocalize.py  dObject.py  dPref.py  dReportWriter.py  dSecurityManager.py  dUserSettingProvider.py  daboApp.py  ez_setup.py  format.sh  main.py  mainMenu.py  playground.py  pyproject.toml  requirements.txt  settings.py  setup.py  setup.py.not-yet  (+1 more)
appRoot/: __init__.py  dbConnectionDefs.py  main.py
biz/: RemoteBizobj.py  __init__.py  dAutoBizobj.py  dBiz.py  dBizobj.py  dBizobj_p.py  dConnection.py  dConstants.py  newRecordProblem.py
classes/: __init__.py  app.py  common.py  dBizobj.py  dConnection.py  dConstants.py  dCursorMixin.py  dMemento.py  dSqlBuilderMixin.py  editBox.py  form.py  label.py  spinner.py  test.py  textBox.py  wicket.py
common/: SimpleCrypt.py  __init__.py  connParser.py  dColors.py  dKeys.py  dObject.py  doDefaultMixin.py  eventMixin.py  fieldSpecParser.py  logger.py  propertyHelperMixin.py  specParser.py
config/: middleware.py  routing.py
controllers/: ActivitiesBizobj.py  OrdersBizobj.py  bizservers.py  error.py
dabo/: LICENSE.TXT  __init__.py  __version__.py  app_logging.py  application.py  base_object.py  color_tools.py  constants.py  dApp.py  dBug.py  dColors.py  dConstants.py  dEvents.py  dException.py  dLocalize.py  dObject.py  dPref.py  dReportWriter.py  dSecurityManager.py  dUserSettingProvider.py  debugging.py  event_mixin.py  events.py  exceptions.py  localization.py  logging.conf  logging.conf.sample  main.py  preference_mgr.py  report_writer.py  security_manager.py  settings.py  user_setting_provider.py  version.py
daboserver/: README  websetup.py
db/: __init__.py  backend.py  connectInfo.py  constants.py  cursor.py  dBackend.py  dConnectInfo.py  dConnection.py  dCursor.py  dCursorMixin.py  dCursorMixin_p.py  dDataSet.py  dMemento.py  dNoEscQuoteStr.py  dSqlBuilderMixin.py  dTable.py  db.py  dbConnectInfo.py  dbConnection.py  dbFirebird.py  dbGadfly.py  dbMsSQL.py  dbMySQL.py  dbOracle.py  dbPostgreSQL.py  dbRecord.py  dbRecordSet.py  dbSQLite.py  dbSqlite.py  dbTemplate.py  dbType.py  dbWeb.py  memento.py  sqlBuilder.py  sqlBuilderMixin.py
demo/: ChangeLog  DaboDemo.cdxml  DaboDemo.py  LICENSE.TXT  Modules.py  SimpleFormWithBizobj.py  SimpleFormWithControls.py  __version__.py  pwObscure.py  setup.py  simpleDemo1.py  simpleDemo2.py  simpleDemo3.py  svn-commit.tmp
dynamicMenus/: menuFileOpen.py
dynamicViewWidgets/: dynamicViewFrame.py  dynamicViewNotebook.py
icons/: __init__.py  actions.py
ide/: ChangeLog  ClassDesigner.py  ClassDesignerComponents.py  ClassDesignerControlMixin.py  ClassDesignerCustomPropertyDialog.py  ClassDesignerEditor.py  ClassDesignerExceptions.py  ClassDesignerFormMixin.py  ClassDesignerMenu.py  ClassDesignerMethodSheet.py  ClassDesignerObjectPropertySheet.py  ClassDesignerPemForm.py  ClassDesignerPropSheet.py  ClassDesignerSizerPalette.py  ClassDesignerTreeSheet.py  CxnEditor.py  DataEnvForm.py  DragHandle.py  Editor.py  FieldSpecEditor.py  HomeDirectoryStatusBar.py  MenuBarPanel.py  MenuDesigner.py  MenuDesignerComponents.py  MenuDesignerForm.py  MenuDesignerMenu.mnxml  MenuDesignerPropForm.py  MenuHyperLink.py  MenuPanel.py  PrefEditor.cdxml  PrefEditor.py  ReportDesigner.py  __version__.py  conn.xsd  mover.cdxml  sample.cnxml  sampleReport.rfxml  svn-commit.tmp
lib/: DesignerUtils.py  DesignerXmlConverter.py  EasyDialogBuilder.py  ListSorter.py  RemoteConnector.py  StopWatch.py  __init__.py  autosuper.py  base.py  caselessDict.py  connParser.py  dUtils.py  dates.py  eventMixin.py  getMouseObject.py  logger.py  manifest.py  propertyHelperMixin.py  reportUtils.py  reportWriter.py  untabify.py  utils.py  uuid.py  xmltodict.py
locale/: dabo.pot
reporting/: reportWriter.py  samplespec.py  samplespec.rfxml
springboard/: buildwin.bat  main.py  setup.py  setup.py.win  springboard.icns
tests/: TestCaseTemplate.py  masterTestSuite.py
tools/: addEncoding.py  extractLoc.py  (+4 more)
(+1162 files in other folders)
