[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
  | requirements.txt
                     # the root of the project
)
'''

[tool.uv]
dev-dependencies = [
    "dabo",
]

[project]
name = "dabo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "ipython>=8.29.0",
    "mock>=5.1.0",
    "numpy>=2.1.3",
    "pexpect>=4.9.0",
    "pillow>=11.0.0",
    "pluggy>=1.5.0",
    "pudb>=2024.1.3",
    "pymysql>=1.1.1",
    "reportlab>=4.2.5",
    "ruff>=0.7.4",
    "six>=1.16.0",
    "wxpython>=4.2.2",
]

[tool.uv.sources]
dabo = { workspace = true }
