[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "dabo",
    "ipython>=8.29.0",
    "pudb>=2024.1.3",
    "ruff>=0.7.4",
]

[project]
name = "dabo"
version = "3.1.0"
description = "A framework for developing data-driven business applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mock>=5.1.0",
    "numpy>=2.1.3",
    "pexpect>=4.9.0",
    "pillow>=11.0.0",
    "pluggy>=1.5.0",
    "pymysql>=1.1.1",
    "reportlab>=4.2.5",
    "six>=1.16.0",
    "wxpython>=4.2.2",
]

[tool.uv.sources]
dabo = { workspace = true }
