[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint.isort]
combine-as-imports = false
force-single-line = false
force-sort-within-sections = false

[project]
name = "dabo"
version = "3.1.0"
description = "A framework for developing data-driven business applications"
readme = "README.md"
authors = [
    { name = "Ed Leafe", email = "ed@leafe.com" },
    { name = "Paul McNett", email = "paul@mcnett.name" }
]
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.0",
    "filetype>=1.2.0",
    "pillow>=11.0.0",
    "pymysql>=1.1.1",
    "reportlab>=4.2.5",
    "wxpython>=4.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "ipython>=8.29.0",
    "pytest-pudb>=0.7.0",
    "ruff>=0.8.0",
]
